# advent-of-code-2025

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: args.rs  lib.rs  main.rs  utils.rs
src/days/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/utils/: input.rs  integers.rs  mod.rs  point.rs
