[package]
name = "aoc-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { version = "0.4.28" }
clap = { version = "4.5.53", features = ["derive"] }
simple_logger = "5.1.0"
num-traits = "0.2.19"
range-collections = "0.4.6"
smallvec = "1.15.1"
itertools = "0.14.0"
roaring = "0.11.2"
good_lp = { version = "1.14.2", features = ["lpsolve"], default-features = false }
